[package]
name = "invincible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy ="0.6.0"
rand = "0.8.4"
bevy_ecs_tilemap={git="https://github.com/StarArawn/bevy_ecs_tilemap", version="0.5.0"}
spin_sleep="1.0"